[package]
name = "rjwt"
version = "0.1.0"
authors = ["JK"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
tokio = { version="1.2", features=["full"] }
futures = { version="0.3", optional=true }
jsonwebtoken = "7"
serde = { version="1.0", features=["derive"] }
env_logger = "0.8"
log = "0.4"
