[package]
name = "rjwt"
description = "JWT CLI tool in Rust"
version = "0.1.0"
authors = ["Jun Kurihara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
tokio = { version = "1.8.2", features = ["full"] }
futures = { version = "0.3.15", optional = true }
jsonwebtoken = "7.2.0"
serde_json = "1.0.64"
env_logger = "0.9.0"
log = "0.4.14"
